@startuml

title __ENTITY's Class Diagram__\n

  package by.khomenko.training.finaltask05.entity {
    class BlackList {
        - userId : Integer
        - userLogin : String
        + BlackList()
        + BlackList()
        + getUserId()
        + setUserId()
        + getUserLogin()
        + setUserLogin()
        + equals()
        + hashCode()
    }
  }
  

  package by.khomenko.training.finaltask05.entity {
    class Category {
        - name : String
        - imagePath : String
        - question : String
        + Category()
        + Category()
        + getName()
        + setName()
        + getImagePath()
        + setImagePath()
        + getQuestion()
        + setQuestion()
        + equals()
        + hashCode()
    }
  }
  

  package by.khomenko.training.finaltask05.entity {
    abstract class Entity {
        - id : Integer
        + getId()
        + setId()
        + equals()
        + hashCode()
    }
  }
  

  package by.khomenko.training.finaltask05.entity {
    class Favorite {
        - userId : Integer
        - categoryId : Integer
        + getUserId()
        + setUserId()
        + getCategoryId()
        + setCategoryId()
        + equals()
        + hashCode()
    }
  }
  

  package by.khomenko.training.finaltask05.entity {
    class Image {
        - path : String
        - userId : Integer
        - categoryId : Integer
        + Image()
        + Image()
        + getPath()
        + setPath()
        + getUserId()
        + setUserId()
        + getCategoryId()
        + setCategoryId()
        + equals()
        + hashCode()
    }
  }
  

  package by.khomenko.training.finaltask05.entity {
    class RecognizedImg {
        - imageId : Integer
        - userId : Integer
        - answer : String
        + getImageId()
        + setImageId()
        + getUserId()
        + setUserId()
        + getAnswer()
        + setAnswer()
        + equals()
        + hashCode()
    }
  }
  

  package by.khomenko.training.finaltask05.entity {
    enum Role {
      ADMINISTRATOR
      USER
      name
    }
  }
  

  package by.khomenko.training.finaltask05.entity {
    class Setting {
        - name : String
        - value : String
        + Setting()
        + Setting()
        + getName()
        + setName()
        + getValue()
        + setValue()
        + equals()
        + hashCode()
    }
  }
  

  package by.khomenko.training.finaltask05.entity {
    class User {
        - name : String
        - photoPath : String
        - level : Integer
        - login : String
        - password : String
        - favorites : List<Favorite>
        + User()
        + getName()
        + setName()
        + getPhotoPath()
        + setPhotoPath()
        + getLevel()
        + setLevel()
        + getLogin()
        + setLogin()
        + getPassword()
        + setPassword()
        + getRole()
        + setRole()
        + getFavorites()
        + setFavorites()
        + equals()
        + hashCode()
    }
  }
  

  BlackList -up-|> Entity
  Category -up-|> Entity
  Entity -up-|> Serializable
  Favorite -up-|> Entity
  Image -up-|> Entity
  RecognizedImg -up-|> Entity
  Setting -up-|> Entity
  User -up-|> Entity
  User o-- Role : role


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
